警告修正とURIコンバーターの追加